--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.4.2",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.44.0",
+    "split.js": "^1.6.5",
     "vue": "~3.2.47",
     "vue-router": "^4.2.5"
   },
